# qtrace

./: .gitattributes  .gitignore  CMakeLists.txt  README  README.md
app/: CMakeLists.txt
app/qtrNewtonSolver/: CMakeLists.txt  main.cpp
app/qtrNewtonViewer/: CMakeLists.txt  main.cpp  main.qml
app/qtrNewtonWriter-mt/: CMakeLists.txt  main.cpp
app/qtrNewtonWriter-nt/: CMakeLists.txt  main.cpp
app/qtrNewtonWriter-st/: CMakeLists.txt  main.cpp
bench/: CMakeLists.txt  qtrNewton.rb.in
qml/: CMakeLists.txt  qtrQuickConfig.h.in
qml/qtrQuick/: CMakeLists.txt  qmldir.in  qtrGauge.qml  qtrGauge_background.pxm  qtrGauge_center.pxm
src/: CMakeLists.txt
src/qtrCore/: CMakeLists.txt  qtrCore  qtrRenderer.cpp  qtrRenderer.h  qtrTile.cpp  qtrTile.h  qtrTiler.cpp  qtrTiler.h
src/qtrMath/: qtrIdentity.h  qtrPolynomial.h  qtrSolver.h  qtrSolver.tpp
src/qtrQuick/: CMakeLists.txt  qtrCanvas.cpp  qtrCanvas.h  qtrQuick  qtrQuick.cpp  qtrQuick.h  qtrQuickPlugin.cpp  qtrQuickPlugin.h
