### CMakeLists.txt --- 
## 
## Author: Julien Wintz
## Copyright (C) 2008-2011 - Julien Wintz, Inria.
## Created: Tue Jan 22 12:09:06 2013 (+0100)
## Version: $Id$
## Last-Updated: Mon Jan 28 12:16:24 2013 (+0100)
##           By: Julien Wintz
##     Update #: 18
######################################################################
## 
### Commentary: 
## 
######################################################################
## 
### Change log:
## 
######################################################################

add_subdirectory(qtrNewtonSolver)
add_subdirectory(qtrNewtonWriter-nt)
add_subdirectory(qtrNewtonWriter-st)
add_subdirectory(qtrNewtonWriter-mt)
add_subdirectory(qtrNewtonViewer)
