## Version: $Id$
##
######################################################################
##
### Commentary:
##
######################################################################
##
### Change Log:
##
######################################################################
##
### Code:

add_subdirectory(qtrNewtonSolver)
add_subdirectory(qtrNewtonWriter-nt)
add_subdirectory(qtrNewtonWriter-st)
add_subdirectory(qtrNewtonWriter-mt)
add_subdirectory(qtrNewtonViewer)

######################################################################
### CMakeLists.txt ends here
