### CMakeLists.txt --- 
## 
## Author: Julien Wintz
## Copyright (C) 2008-2011 - Julien Wintz, Inria.
## Created: Tue Jan 22 12:08:32 2013 (+0100)
## Version: $Id$
## Last-Updated: Mon Jan 28 20:39:06 2013 (+0100)
##           By: Julien Wintz
##     Update #: 13
######################################################################
## 
### Commentary: 
## 
######################################################################
## 
### Change log:
## 
######################################################################

add_subdirectory(qtrCore)
add_subdirectory(qtrQuick)
