## Version: $Id$
##
######################################################################
##
### Commentary:
##
######################################################################
##
### Change Log:
##
######################################################################
##
### Code:

add_subdirectory(qtrCore)
add_subdirectory(qtrQuick)

######################################################################
### CMakeLists.txt ends here
