### CMakeLists.txt --- 
## 
## Author: Julien Wintz
## Copyright (C) 2008-2011 - Julien Wintz, Inria.
## Created: Tue Jan 22 12:09:31 2013 (+0100)
## Version: $Id$
## Last-Updated: Wed Jan 23 00:00:55 2013 (+0100)
##           By: Julien Wintz
##     Update #: 8
######################################################################
## 
### Commentary: 
## 
######################################################################
## 
### Change log:
## 
######################################################################

project(qtrNewtonSolver)

add_executable(${PROJECT_NAME} main.cpp)
